--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Bridgit Nguyen
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: B.S. Mechanical Engineering 26’ at University of Rochester
+Undergraduate researcher in Nonlinear FEA on historical structures under seismic conditions
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
